--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,4 @@
-VITE_API_BASE_URL=
+VITE_API_BASE_URL=https://bgi-recruitment.vercel.app
 MAIL_USERNAME=robin_jyz@163.com
 MAIL_PASSWORD=SWTn43JnPPudEHf4
 TARGET_EMAIL=jiangyuze@genomics.cn
