--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-MAIL_USERNAME=robin_jyz@163.com
-MAIL_PASSWORD=SWTn43JnPPudEHf4
-TARGET_EMAIL=jiangyuze@genomics.cn
+RESEND_API_KEY=re_8Ew4hHjD_FSVPFNMVaVySrBACbM9GTm2E
+SOURCE_EMAIL='BGI Recruitment <recruitment@updates.frexpl.me>'
+TARGET_EMAIL=robin_jyz@163.com
