--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@ant-design/icons": "^6.0.0",
+    "@sendgrid/mail": "^8.1.4",
     "antd": "^5.24.5",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
@@ -19,7 +20,8 @@
     "nodemailer": "^6.10.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-router-dom": "^7.4.0"
+    "react-router-dom": "^7.4.0",
+    "resend": "^2.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
