Fix API request.

--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,4 @@
-VITE_API_BASE_URL=https://bgi-recruitment.vercel.app
+VITE_API_BASE_URL=https://recruitment-hx-double-check-0406.vercel.app
 RESEND_API_KEY=re_8Ew4hHjD_FSVPFNMVaVySrBACbM9GTm2E
-TARGET_EMAIL=jiangyuze@genomics.cn
+SOURCE_EMAIL='BGI Recruitment <recruitment@updates.frexpl.me>'
+TARGET_EMAIL=robin_jyz@163.com
