--- a/vercel.json
+++ b/vercel.json
@@ -12,8 +12,7 @@
   ],
   "routes": [
     { "src": "/api/(.*)", "dest": "/api/$1" },
-    { "src": "/(.*)", "dest": "/dist/$1" },
     { "handle": "filesystem" },
-    { "src": "/.*", "dest": "/dist/index.html" }
+    { "src": "/(.*)", "dest": "/index.html" }
   ]
 }
