--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "mailgun.js": "^12.0.1",
     "multer": "^1.4.5-lts.2",
     "nodemailer": "^6.10.0",
     "react": "^19.0.0",
