--- a/vercel.json
+++ b/vercel.json
@@ -11,7 +11,8 @@
     }
   ],
   "routes": [
-    { "src": "/api/(.*)", "dest": "/api/$1" },
+    { "src": "/api/upload", "methods":["POST", "OPTIONS"], "dest": "/api/upload.js" },
+    { "src": "/api/(.*)", "methods":["POST", "OPTIONS"], "dest": "/api/$1" },
     { "handle": "filesystem" },
     { "src": "/(.*)", "dest": "/index.html" }
   ]
